test/testdata/syntax_errors/return_outside_function.lox
// error: return statement must be inside a function definition
return 2;
